metadata/force-app/main/default/objects/PDRI__Deployment_Plan_Result__c/fields/Deployment_Plan_Failed_Records__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Plan_Failed_Records__c</fullName>
    <label>Deployment Plan Failed Records</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>